<resources>
    <string name="app_name">Shopping List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">Shopping List</string>

    <string name="title_activity_introduction">Introduction</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title">Shopping List</string>
    <string name="purchased">Purchased</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="item">Item</string>
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="itemType">Item Type</string>
    <string name="hint">Item Name</string>
    <string name="hintDesc">Description</string>
    <string name="estPrice">Estimated Price</string>
    <string name="save">Save</string>
    <string name="newItem">New Item</string>
    <string name="deleteall">Delete All</string>
    <string name="storeName">Where to Buy</string>
</resources>
