<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.ait.android.helen.shoppinglist.CreateItemActivity"
    android:background="#877759"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemType"
        android:textColor="@color/reddish"/>

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etItemName"
        android:hint="@string/hint"
        android:textColor="@color/apple_green"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:hint="@string/hintDesc"
        android:textColor="@color/apple_green"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPrice"
        android:hint="@string/estPrice"
        android:inputType="number"
        android:textColor="@color/apple_green"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStoreName"
        android:hint="@string/storeName"
        android:textColor="@color/green_light"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkPurchased"
        android:text="@string/purchased"
        android:textColor="@color/reddish"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:textColor="@color/background"/>

</LinearLayout>
